# StockChecker

./: CLAUDE.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: daily_report.yml
.streamlit/: config.toml
config/: watchlist.toml
data/fundamentals/: fscore.parquet  latest.parquet
data/market/: 2026-03.parquet  2026-04.parquet  2026-05.parquet
data/prices/: 2025-03.parquet  2025-04.parquet  2025-05.parquet  2025-06.parquet  2025-07.parquet  2025-08.parquet  2025-09.parquet  2025-10.parquet  2025-11.parquet  2025-12.parquet  2026-01.parquet  2026-02.parquet  2026-03.parquet  2026-04.parquet  2026-05.parquet
data/signals/: 2026-04-01.parquet  2026-04-07.parquet  2026-04-08.parquet  2026-04-09.parquet  2026-04-10.parquet  2026-04-13.parquet  2026-04-14.parquet  2026-04-15.parquet  2026-04-16.parquet  2026-04-17.parquet  2026-04-20.parquet  2026-04-21.parquet  2026-04-22.parquet  2026-04-23.parquet  2026-04-24.parquet  2026-04-27.parquet  2026-04-28.parquet  (+11 more)
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  SCREENING.md  SPEC.md  UI_DESIGN.md
reports/: 2026-04-01.html  2026-04-07.html  2026-04-08.html  2026-04-09.html  2026-04-10.html  2026-04-13.html  2026-04-14.html  2026-04-15.html  2026-04-16.html  2026-04-17.html  2026-04-20.html  2026-04-21.html  2026-04-22.html  2026-04-23.html  2026-04-24.html  2026-04-27.html  2026-04-28.html  2026-04-30.html  2026-05-07.html  2026-05-11.html  2026-05-12.html  2026-05-13.html  2026-05-14.html  2026-05-18.html  2026-05-19.html  index.html
scripts/: daily_batch.py
templates/: report.html
(+17 files in other folders)
