[project]
name = "stock-report"
version = "0.1.0"
description = "東証上場銘柄の日次レポート自動生成アプリ"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.50",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_report"]
