[project]
name = "stock-report"
version = "0.1.0"
description = "東証上場銘柄の日次レポート自動生成アプリ"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.50",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b1",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "plotly>=5.0.0",
    "jinja2>=3.0.0",
    "xlrd>=2.0.0",
    "openpyxl>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_report"]
